--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,10 @@
 {
-  "name": "selenia-plugins/application-builder",
+  "name": "selenia-modules/application-builder",
   "description": "A graphical environment for interactively building Selenia applications",
   "type": "selenia-plugin",
   "keywords": [
     "plugin",
+    "electro",
     "selenia"
   ],
   "license": "MIT",
@@ -18,10 +19,11 @@
       "email": "claudio.silva@impactwave.com"
     }
   ],
-  "homepage": "https://github.com/selenia-plugins/application-builder",
+  "homepage": "https://github.com/selenia-modules/application-builder",
   "require": {
-    "php": ">=5.4.0",
-    "selenia/installers": "^1.0.0"
+    "php": ">=5.6.0",
+    "electro/installers": "^1.0.0",
+    "selenia/platform": "dev-master"
   },
   "autoload": {
     "psr-4": {
